--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 </head>
 <body>
 
-  <div class="card-qr">
-    <img src="./images/image-qr-code.png" alt=""/>
-    <h2>Improve your front-end skills by building projects</h2>
+  <main class="card-qr">
+    <img src="./images/image-qr-code.png" alt="qr-code"/>
+    <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">FireFrozen</a>.
-  </div>
+  </footer>
 
 </body>
 </html>
